// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswersList test, correct_answer_id !== item.id 1`] = `
<div
  className="answers-list"
>
  <Content
    answerId={1}
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
        ],
        "correct_answer_id": 0,
      }
    }
  />
  <Content
    answerId={2}
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
        ],
        "correct_answer_id": 0,
      }
    }
  />
  <Content
    answerId={3}
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
        ],
        "correct_answer_id": 0,
      }
    }
  />
</div>
`;

exports[`AnswersList test, correct_answer_id === item.id 1`] = `
<div
  className="answers-list"
>
  <Content
    answerId={2}
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
        ],
        "correct_answer_id": 1,
      }
    }
  />
  <Content
    answerId={3}
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
        ],
        "correct_answer_id": 1,
      }
    }
  />
</div>
`;
